Fixed bottle and thumbnails
